# auto-code

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/checkpoint/: saver.rs
src/cli/: args.rs  interactive.rs  mod.rs  session_store.rs  tui.rs  ui.rs  utils.rs
src/config/: mod.rs  parser.rs  prd.rs
src/core/: executor.rs  process.rs  provider.rs
src/logger/: writer.rs
src/loop_engine/: convergence.rs  driver.rs  evaluator.rs  pass_condition.rs  state.rs
src/plugin/: mod.rs  registry.rs
src/plugin/prd_runner/: app.rs  mod.rs
src/plugin/prd_runner/checkpoint/: mod.rs  saver.rs
src/plugin/prd_runner/config/: mod.rs  parser.rs
src/plugin/prd_runner/core/: executor.rs  mod.rs  process.rs  provider.rs
src/plugin/prd_runner/logger/: mod.rs  report.rs
src/plugin/prd_runner/loop_engine/: convergence.rs  driver.rs  evaluator.rs  mod.rs  pass_condition.rs  state.rs
src/provider/: mod.rs
src/runtime/: signal.rs
