[package]
name = "auto-code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "autocode"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
humantime = "2.1"
pulldown-cmark = "0.12"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
walkdir = "2.5"
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.12"
